--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.4",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-phone-number-input": "^3.2.19"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
